--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,10 @@ body {
         @apply bg-[#DD7878] py-2 px-4 rounded-md text-white text-lg font-semibold hover:opacity-80 duration-200
     }
 }
+
+.select-status {
+    background-image: url('./assets/icon-chevron-down.svg');
+    appearance: none;
+    background-repeat: no-repeat;
+    background-position:right 16px top 50%;
+}
